--- a/lesson2/classwork2/index.classwork2.html
+++ b/lesson2/classwork2/index.classwork2.html
@@ -13,7 +13,7 @@
 <div>
     <div class="targetA">Olha</div>
     <div class="targetB">Olha</div>
-    <div class="targetC">Olha</div>0
+    <div class="targetC">Olha</div>
     <div class="targetD">Olha</div>
 </div>
 
