--- a/lesson3/index.homework3.html
+++ b/lesson3/index.homework3.html
@@ -7,9 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
-<div></div>
-
+<div class="wrap">
+    <div class="A">A</div>
+    <div class="down-box">
+        <div class="B">B</div>
+        <div class="C">C</div>
+    </div>
+</div>
 </body>
 </html>
