add classwork4 to github

--- a/lesson3/classwork3/index.classwork3.html
+++ b/lesson3/classwork3/index.classwork3.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class="wrap">
+    <div class="A">A</div>
+    <div class="down-box">
+        <div class="B">B</div>
+        <div class="C">C</div>
+        <div class="D">D</div>
+        <div class="E">E</div>
+    </div>
+    <div class="F">F</div>
+    </div>
+</div>
 
 </body>
 </html>
