--- a/final progect/index.project.html
+++ b/final progect/index.project.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,9 +7,173 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<header class="header">
+    <div class="top-bar">
+        <div class="header_logo"><img src="images/logo.svg" alt="Logo"></div>
+        <nav class="nav_menu1">
+            <div class="nav_menu1__item"><a href="#">Why Sprig?</a></div>
+            <div class="nav_menu1__item"><a href="#">Product</a></div>
+            <div class="nav_menu1__item"><a href="#">Customers</a></div>
+            <div class="nav_menu1__item"><a href="#">Resources</a></div>
+            <div class="nav_menu1__item"><a href="#">Plans</a></div>
+        </nav>
+        <nav class="nav_menu2">
+            <div class="nav_menu2__item"><a href="#">Sign In</a></div>
+            <div class="nav_menu2__item"><a href="#">Talk to Sales</a></div>
+            <div class="nav_button"></div>
+            <button class="nav_btn nav_btn__start for free">Start for Free</button>
+        </nav>
+    </div>
+    <div class="header_wrap__content">
+        <div class="header_wrap__content_left">
+            <div class="header_wrap__content_left__title">In-context user research that's fast and reliable.</div>
+            <div class="txt">Ensure user research happens early and often with Sprig's targeted microsurveys, video questions, and more.</div>
+            <div class="nav_buttons2">
+                <button class="nav_btn2 nav_btn2__Start for Free">Start for Free</button>
+                <button class="nav_btn2 nav_btn2__Talk to Sales">Talk to Sales</button>
+            </div>
+        </div>
+        <div class="header_wrap__content_right">
+            <div class="header_wrap__content_right__image1"><img src="images/yellowblock.svg" alt="background app"></div>
+            <div class="header_wrap__content_right__image2"><img src="images/videopic.svg" alt="main"></div>
+        </div>
+    </div>
+        <div class="footer">
+            <h2>Trusted by the world's most innovative companies</h2>
+            <div class="container">
+                <div class="container1">
+                <div class="icons_icon1"><img src="images/icon1.svg" alt="icon1"></div>
+                <div class="icons_icon2"><img src="images/icon2.svg" alt="icon2"></div>
+                <div class="icons_icon3"><img src="images/icon3.svg" alt="icon3"></div>
+                </div>
+                <div class="container2">
+                <div class="icons_icon4"><img src="images/icon4.svg" alt="icon4"></div>
+                <div class="icons_icon5"><img src="images/icon5.svg" alt="icon5"></div>
+                <div class="icons_icon6"><img src="images/icon6.svg" alt="icon6"></div>
+                </div>
+                <div class="container3">
+                <div class="icons_icon7"><img src="images/icon7.svg" alt="icon7"></div>
+                <div class="icons_icon8"><img src="images/icon8.svg" alt="icon8"></div>
+                <div class="icons_icon9"><img src="images/icon9.svg" alt="icon9"></div>
+                </div>
+                <div class="container4">
+                <div class="icons_icon10"><img src="images/icon10.svg" alt="icon10"></div>
+                <div class="icons_icon11"><img src="images/icon11.svg" alt="icon11"></div>
+                <div class="icons_icon12"><img src="images/icon12.svg" alt="icon12"></div>
+                </div>
+                <div class="container5">
+                <div class="icons_icon13"><img src="images/icon13.svg" alt="icon13"></div>
+                <div class="icons_icon14"><img src="images/icon14.svg" alt="icon14"></div>
+                <div class="icons_icon15"><img src="images/icon15.svg" alt="icon15"></div>
+                </div>
+            </div>
+        </div>
 
-
+    <div class="container_box">
+        <div class="container_box__image"><img src="images/bicycle.svg" alt="bicycle"></div>
+        <div class="txt2">
+        <div class="h2">Modern product teams move fast, but learning from customers takes a ton of time, effort, and energy.</div>
+        <div class="p">So teams often rush user research or skip it altogether, causing products and features to miss the mark.</div>
+        </div>
+    </div>
+    <div class="container2_box">
+        <div class="container2_box_h2">Sprig makes it possible to obtain qualitative insights at the speed and scale of analytics</div>
+        <div class="container2_box_image"><img src="images/list.svg" alt="list"></div>
+        <div class="container2_box_button">Start for Free</div>
+    </div>
+    <div class="container3_box">
+        <div class="container3_box_image"><img src="images/img3box.svg" alt="img"></div>
+        <div class="txt3">
+        <div class="container3_box_h2">Target your actual users during key moments throughout their product journey.</div>
+        <div class="container3_box_p">Get 30% higher response rates by asking your customers hyper-relevant questions based on who they are and what they'll do within your product.</div>
+        </div>
+    </div>
+        <div class="container4_box">
+            <div class="container4_box_title">Solutions</div>
+            <div class="container4_box_h">How Sprig helps ensure every product decision is customer-informed</div>
+            <div class="container4_box_p">And helps through every stage of your product.</div>
+        </div>
+    <div class="container5_box">
+        <div class="container5_box_left">
+            <div class="container5_box_left_vector"><img src="images/img1cont5.svg" alt="vector"></div>
+            <div class="container5_box_left_h">Contextual Microsurveys</div>
+            <div class="container5_box_left_p">Keep a constant pulse on your customer’s experience. Continuously surface user insights via in-product, email, or link microsurveys to improve your product and acquisition funnels.</div>
+            <div class="container5_box_left_button">Learn More</div>
+        </div>
+        <div class="container5_box_right"><img src="images/img2cont5.svg" alt="image"></div>
+    </div>
+    <div class="container6_box">
+        <div class="container6_box_left">
+            <div class="container6_box_left_vector"><img src="images/img1cont6.svg" alt="vector"></div>
+            <div class="container6_box_left_h">Video Questions</div>
+            <div class="container6_box_left_p">Have more customer conversations, in less time. Conduct one-to-one user interviews anytime, anywhere in order to validate ideas and build a roadmap your customers will love.</div>
+            <div class="container6_box_left_button">Learn More</div>
+        </div>
+        <div class="container6_box_right"><img src="images/img2cont6.svg" alt="image"></div>
+    </div>
+    <div class="container7_box">
+        <div class="container7_box_left">
+            <div class="container7_box_left_vector"><img src="images/img1cont7.svg" alt="vector"></div>
+            <div class="container7_box_left_h">Concept Testing</div>
+            <div class="container7_box_left_p">Quickly iterate designs based on feedback from your users. Conduct rapid and remote concept testing to ensure your new concept, design, and messaging hit the mark by collecting feedback from your customers before launch.</div>
+            <div class="container7_box_left_button1">Learm More</div>
+            <div class="container7_box_left_button234">
+            <div class="container7_box_left_button2">Contextual Microsurveys</div>
+            <div class="container7_box_left_button3">Video Questions</div>
+            <div class="container7_box_left_button4">Concept Testing</div>
+            </div>
+        </div>
+        <div class="container7_box_right"><img src="images/img2cont7.svg" alt="image"></div>
+    </div>
+    <div class="container8_box">
+        <div class="container8_box_title">Features</div>
+        <div class="container8_box_h">How Sprig delivers accurate, in-depth user insights in real-time</div>
+        <div class="container8_box_bottombox">
+            <div class="container8_box_left"><img src="images/img1.cont8.svg" alt="img"></div>
+            <div class="container8_box_right"><img src="images/img2cont8.svg" alt="menu"></div>
+        </div>
+    </div>
+    <div class="container9_box">
+        <div class="container9_box_left">
+            <div class="container9_box_left_title">INTEGRATIONS</div>
+            <div class="container9_box_left_h">Share data and insights across all of your (other) favorite tools by integrating with Sprig</div>
+            <div class="container9_box_left_p">Connect events and attributes from other platforms to ensure you’re asking the right customers the right questions. Then share your findings with apps like Slack and Zendesk to get a comprehensive view of your users' behaviors.</div>
+            <div class="container9_box_left_button">See All Integrations</div>
+        </div>
+        <div class="container9_box_right">
+            <div class="container9_box_right_image"><img src="images/img1cont9.svg" alt="img"></div>
+        </div>
+    </div>
+    <div class="container10_box">
+        <div class="container10_box_left">
+            <div class="container10_box_left_title">CASE STUDY</div>
+            <div class="container10_box_left_h">Trusted by the world's most customer-centric teams</div>
+            <div class="container10_box_left_p">Sprig helps product and research teams ensure user insights fuel every product decision.</div>
+            <div class="container10_box_left_button">Read More</div>
+        </div>
+        <div class="container10_box_right">
+            <div class="container10_box_right_txt">Sprig helps us collect insights easier, faster, and more accurately than any other tool on the market, which allows us to build a better product for our users and ultimately grow our revenue.</div>
+            <div class="container10_box_right_bottom">
+            <div class="container10_box_right_bottom_image"><img src="images/img1cont10.svg" alt="photo"></div>
+                <div class="container10_box_right_bottom2">
+                    <div class="container10_box_right_bottom2_h3">Daniel Layfield</div>
+                    <div class="container10_box_right_bottom2_h5">Growth Product Manager at Codecademy</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container11_box">
+        <div class="container11_box_h">Launch a Sprig within minutes.</div>
+        <div class="container11_box_h1">See insights within hours.</div>
+        <div class="container11_box_p">Create your free account to conduct video interviews, test designs, and survey specific users within your product, on your website, and more.</div>
+        <div class="container11_box_button">Start for Free</div>
+    </div>
+    <div class="container11_box"><img src="images/imgcont11.svg" alt="img"></div>
+</header>
 </body>
 </html>
